# whoop-to-obsidian

./: .gitignore  .whoop_api_token  OAUTH_SETUP.md  PROJECT_PLAN.md  README.md  SCHEDULING.md  SECURITY_WARNING.md  config.example.yaml  get_token.sh  install_scheduler.sh  pyproject.toml  sync_whoop.sh  test_api.py  test_sleep_data.py  update_schedule.py  whoop-to-obsidian.code-workspace
tests/: __init__.py  test_config.py  test_models.py  test_obsidian_writer.py  test_template_generator.py
whoop_obsidian/: __init__.py  __main__.py  auth_helper.py  config.py  exceptions.py  models.py  oauth.py  obsidian_writer.py  setup_automation.py  template_generator.py  whoop_client.py
